明白js跳转渲染的问题。

--- a/platforms/android/app/src/main/res/layout/activity_splash.xml
+++ b/platforms/android/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:keepScreenOn="true"
-              android:textColor="#33b5e5"
+              android:textColor="#FFFFFF"
               android:textStyle="bold"
               android:textSize="50sp"
               android:gravity="center"
